.local-dev/manifest/ns-system/components/builder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-builder

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-builder
  template:
    metadata:
      labels:
        app: ns-builder
    spec:
      serviceAccountName: ns-builder
      containers:
        - name: buildpack
          image: paketobuildpacks/builder-jammy-full:latest
          imagePullPolicy: Always
          command:
            - sleep
            - infinity
          volumeMounts:
            - mountPath: /workspace
              name: buildpack

        - name: buildkitd
          image: moby/buildkit:latest
          imagePullPolicy: Always
          args:
            - --addr
            - unix:///run/buildkit/buildkitd.sock
          readinessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /run/buildkit
              name: socket
            - mountPath: /etc/buildkit/buildkitd.toml
              name: config
              subPath: buildkitd.toml

        - name: builder
          image: ghcr.io/traptitech/ns-builder:main
          imagePullPolicy: Never
          args:
            - --loglevel=debug
            - --config=/opt/config/ns.yaml
          volumeMounts:
            - mountPath: /neoshowcase/buildpack
              name: buildpack
            - mountPath: /run/buildkit
              name: socket
            - mountPath: /opt/config/ns.yaml
              name: config
              subPath: ns.yaml
            - mountPath: /keys
              name: keys
            # - mountPath: /.docker
            #   name: secret
      volumes:
        - name: buildpack
          emptyDir: {}
        - name: socket
          emptyDir: {}
        - name: config
          configMap:
            name: ns-config
        - name: keys
          secret:
            secretName: ns-keys
        # - name: secret
        #   secret:
        #     secretName: registry-secret
      # nodeSelector:
      #   neoshowcase.trap.jp/builder-node: "true"
