.local-dev/manifest/ns-system/components/controller-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ns-controller

spec:
  replicas: 1
  serviceName: ns-controller
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-controller
  template:
    metadata:
      labels:
        app: ns-controller
    spec:
      serviceAccountName: ns-controller
      containers:
        - name: ns-controller
          image: ghcr.io/traptitech/ns-controller:main
          imagePullPolicy: Never
          args:
            - --loglevel=debug
            - --config=/opt/config/ns.yaml
          ports:
            - containerPort: 2201
              name: ssh
            - containerPort: 8080
              name: webhook
            - containerPort: 10000
              name: grpc
          volumeMounts:
            - mountPath: /opt/repo-cache
              name: repository-cache
            - mountPath: /opt/config/ns.yaml
              name: config
              subPath: ns.yaml
            - mountPath: /keys
              name: keys
      volumes:
        - name: repository-cache
          emptyDir: {}
        - name: config
          configMap:
            name: ns-config
        - name: keys
          secret:
            secretName: ns-keys
