.local-dev/manifest/ns-system/components/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-gateway

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-gateway
  template:
    metadata:
      labels:
        app: ns-gateway
    spec:
      containers:
        - name: ns-gateway
          image: ghcr.io/traptitech/ns-gateway:main
          imagePullPolicy: Never
          args:
            - --loglevel=debug
            - --config=/opt/config/ns-gateway.yaml
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /opt/config/ns.yaml
              name: config
              subPath: ns.yaml
            - mountPath: /keys
              name: keys
      volumes:
        - name: config
          configMap:
            name: ns-config
        - name: keys
          secret:
            secretName: ns-keys
