.local-dev/manifest/ns-system/components/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-dashboard

spec:
  type: ClusterIP
  selector:
    app: ns-dashboard
  ports:
    - port: 80
      targetPort: http
      name: http
