.local-dev/manifest/ns-system/components/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-gateway

spec:
  type: ClusterIP
  selector:
    app: ns-gateway
  ports:
    - port: 80
      targetPort: http
      name: http
