.local-dev/manifest/ns-system/components/mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-mc

spec:
  type: ClusterIP
  selector:
    app: ns-mc
  ports:
    - port: 80
      targetPort: http
      name: http
