.local-dev/manifest/ns-system/components/ssgen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-ssgen

spec:
  type: ClusterIP
  selector:
    app: ns-ssgen
  ports:
    - port: 80
      targetPort: http
      name: http
    - port: 10000
      targetPort: grpc
      name: grpc
