.local-dev/manifest/ns-system/components/dashboard-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ns-dashboard

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`ns.local.trapti.tech`)
      middlewares:
        - name: ns-auth-dev
          namespace: ns-system
      services:
        - namespace: ns-system
          kind: Service
          name: ns-dashboard
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
